<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="8sp"
        tools:layout_editor_absoluteY="8sp">

        <TextView
            android:id="@+id/dummyText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:contentDescription="@string/app_icon"
            android:src="@drawable/font" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/twallet_tests"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/dummyText2"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="" />

        <Button
            android:id="@+id/OperationTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@color/purple_500"
            android:text="@string/Operation_tests"
            android:textColor="#ffffff"
            android:textSize="15sp"
            app:rippleColor="#FFFFFF" />

        <TextView
            android:id="@+id/dummyText3"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="" />

        <Button
            android:id="@+id/ComponentTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@color/purple_500"
            android:text="@string/components_tests"
            android:textColor="#ffffff"
            android:textSize="15sp"
            app:rippleColor="#FFFFFF" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>