<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tests.AttestationMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="8sp"
        tools:layout_editor_absoluteY="8sp">

        <TextView
            android:id="@+id/dummyText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="" />

        <TextView
            android:id="@+id/testDescriptionCipher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/testsTitle"
            android:textSize="30sp" />

        <CheckBox
            android:id="@+id/checkDescriptionCipher1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text=""
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/checkDescriptionCipher2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text=""
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/checkDescriptionCipher3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text=""
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/checkDescriptionCipher4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text=""
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/checkDescriptionCipher5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text=""
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/checkDescriptionCipher6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text=""
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/checkDescriptionCipher7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text=""
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/checkDescriptionCipher8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text=""
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/checkDescriptionCipher9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text=""
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/checkDescriptionCipher10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text=""
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/checkDescriptionCipher11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text=""
            android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/testDescriptionRepetitions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/testsReps"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/defaultTestReps"
            android:inputType="number" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/startTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@color/purple_500"
            android:text="@string/test_button"
            android:textColor="#ffffff"
            android:textSize="15sp"
            app:rippleColor="#FFFFFF" />

    </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>